--- a/Exerpag17a.html
+++ b/Exerpag17a.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <img src="http://www.clipartbest.com/cliparts/niE/5AA/niE5AAMdT.jpg">
-  <p id="prof">Isabel Fernandes</p>
+  <p id="prof">Isabel Fernandes IF</p>
   <ul class="alunos">
     <li>André</li>
     <li>Dima</li>
